[metadata]
name = towerse
version = 0.1
summary = Tower Systems Engineering Model for NREL WISDEM
description-file = README.md
keywords = openmdao
home-page =
download-url =
author = S. Andrew Ning
author-email = andrew.ning@nrel.gov
maintainer =
maintainer-email =
license = Apache License, Version 2.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist =
obsoletes-dist =
requires-python =
	>=2.6
	<3.0
requires-externals =
project-url =

[openmdao]
copyright =
static_path = [ '_static' ]

