[metadata]
name = towerse
version = 0.1
summary = Tower Systems Engineering Model for NREL WISDEM
description-file = README.md
keywords = openmdao
home-page =
download-url =
author = S. Andrew Ning
author-email = andrew.ning@nrel.gov
maintainer =
maintainer-email =
license = Apache License, Version 2.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist =
obsoletes-dist =
requires-python =
	>=2.6
	<3.0
requires-externals =
project-url =

[openmdao]
copyright =
static_path = [ '_static' ]
install_requires = ['openmdao.main', 'pBEAM', 'wisdem.commonse']
dependency_links = ['https://github.com/NREL-WISDEM/pBEAM/tarball/master#egg=pBEAM-0.1.0', 'https://github.nrel.gov/sning/CommonSE/tarball/master#egg=wisdem.commonse-0.1.0']

